dev/test_programs/VALID/group1/precedence.go
package test

func derp() {
	1||2&&3;3&&2||1;
	1||2==3;3==2||1;
	1||2+3;3+2||1;
	1||2*3;3*2||1;

	1&&2==3;3==2&1;
	1&&2+3;3+2&&1;
	1&&2*3;3*2&&1;

	1==2+3;3+2==1;
	1==2*3;3*2==1;

	1+2*3;3*2+1;

	(1+2)*3;3*(1+2);
}
