dev/test_programs/INVALID/group12/scan_parse_errors/blank_id_error2.go
// "_" is not a value

package main

func main() {
    _ += 2
}